--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.1.0",
+    "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-router-dom": "^4.3.1"
+    "reset-css": "^4.0.1"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
